[package]
name = "nf5"
version = "0.1.0"
authors = ["Bradford D. Boyle <bradford.d.boyle@gmail.com>"]
build = "build.rs"

[build-dependencies]
syntex = "0.42"
pnet_macros = "0.21.0"

[dependencies]
pcap = "0.5.7"
pnet = "0.21.0"
pnet_macros = "0.21.0"
pnet_macros_support = "0.21.0"
serde = "0.9.11"
serde_json = "0.9.9"
time = "0.1"
